# acorn

./: .gitignore  .travis.yml  AbstractSyntaxTree.cpp  AbstractSyntaxTree.h  CMakeLists.txt  LICENSE.md  Lexer.cpp  Lexer.h  Mofile  Parser.cpp  Parser.h  README.md  TODO.md  example.jet  example.quark  main.cpp  run-samples.sh  run-tests.sh  sample.acorn  sample2.acorn  test.acorn  test.jet  test2.acorn  test2.jet
cmake/catch/: CMakeLists.txt
cmake/gtest/: CMakeLists.txt
cmake/modules/: FindLLVM.cmake
cmake/spdlog/: CMakeLists.txt
compiler/: AbstractSyntaxTree.cpp  AbstractSyntaxTree.h  Builtins.cpp  Builtins.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Compiler.cpp  Compiler.h  Errors.cpp  Errors.h  Generics.cpp  Generics.h  Lexer.cpp  Lexer.h  LexicalAnalysis.cpp  LexicalAnalysis.h  Mangler.cpp  Mangler.h  Parser.cpp  Parser.h  Preprocessor.cpp  Preprocessor.h  PrettyPrinter.cpp  PrettyPrinter.h  SymbolTable.cpp  SymbolTable.h  Token.cpp  Token.h  Types.cpp  Types.h  Typing.cpp  Typing.h  ast.cpp  ast.h  builtins.cpp  builtins.h  codegen.cpp  codegen.h  compiler.cpp  (+27 more)
compiler/ast/: nodes.cpp  nodes.h  visitor.cpp  visitor.h
compiler/codegen/: builtins.cpp  builtins.h  module.cpp  module.h  types.cpp  types.h  unit.cpp  unit.h
compiler/compiler/: compiler.cpp  compiler.h  pass.cpp  pass.h
compiler/include/acorn/: codegen.h  compiler.h  diagnostics.h  lexer.h  parser.h  prettyprinter.h  symboltable.h  utils.h
compiler/include/acorn/ast/: nodes.h  visitor.h
compiler/include/acorn/codegen/: generator.h  irbuilder.h  mangler.h
compiler/include/acorn/parser/: keywords.h  lexer.h  parser.h  token.h
compiler/include/acorn/symboltable/: builder.h  symbol.h
compiler/include/acorn/typesystem/: checker.h  inferrer.h  types.h  visitor.h
compiler/lib/: CMakeLists.txt  codegen.cpp  compiler.cpp  diagnostics.cpp  lexer.cpp  parser.cpp  prettyprinter.cpp  symboltable.cpp
compiler/lib/ast/: nodes.cpp  visitor.cpp
compiler/lib/codegen/: followers.cpp  generator.cpp  mangler.cpp
compiler/lib/parser/: keywords.cpp  lexer.cpp  parser.cpp  token.cpp
compiler/lib/symboltable/: builder.cpp  namespace.cpp  symbol.cpp
compiler/lib/typesystem/: checker.cpp  inferrer.cpp  types.cpp  visitor.cpp
compiler/parser/: keywords.cpp  keywords.h
compiler/parsing/: lexer.cpp  lexer.h  parser.cpp  parser.h  token.cpp  token.h
compiler/src/: acornc.cpp  compiler.cpp  compiler.h  diagnostics.cpp  lexer.cpp  parser.cpp  prettyprinter.cpp  symboltable.cpp  symboltable.h  token.cpp
compiler/src/ast/: nodes.cpp  nodes.h  visitor.cpp
compiler/src/parser/: keywords.cpp
compiler/src/typesystem/: inferrer.cpp  types.cpp  visitor.cpp
compiler/test/: CMakeLists.txt
compiler/test/parser/: token_test.cpp
compiler/typesystem/: checker.cpp  checker.h  inferrer.cpp  inferrer.h  types.h
compiler/typing/: checker.cpp  checker.h  inferrer.cpp  inferrer.h  types.cpp  types.h  typing.cpp  typing.h  visitor.cpp  visitor.h
docs/: Gemfile  Typing.md  about.md  ast.md  compiler.md  concurrency.md  dispatch.md  generics.md  index.html  index.md
docs/_posts/: 2017-03-16-welcome-to-jekyll.markdown
documentation/: concurrency.md  generics.md  index.md
examples/: concurrency.acorn  echo.acorn  echo_client.acorn  errors.acorn  strings.jet  types.acorn  types.jet  vector2.acorn
include/acorn/: compiler.h  diagnostics.h  prettyprinter.h  utils.h
include/acorn/ast/: nodes.h  visitor.h
include/acorn/codegen/: followers.h  generator.h  irbuilder.h  mangler.h
include/acorn/parser/: lexer.h  parser.h  scanner.h  token.h
include/acorn/symboltable/: builder.h  namespace.h  symbol.h
include/acorn/typesystem/: checker.h  types.h  visitor.h
lib/: CMakeLists.txt  compiler.cpp  diagnostics.cpp  prettyprinter.cpp
lib/ast/: nodes.cpp  visitor.cpp
lib/codegen/: followers.cpp  generator.cpp  irbuilder.cpp  mangler.cpp
lib/parser/: lexer.cpp  parser.cpp  scanner.cpp  token.cpp
lib/symboltable/: builder.cpp  namespace.cpp  symbol.cpp
lib/typesystem/: checker.cpp  types.cpp  visitor.cpp
samples/: json.acorn  run.py  single_method.acorn
src/: CMakeLists.txt  acornc.cpp
stdlib/: base.acorn  builtin.acorn  builtins.jet  builtins.quark  graphics.jet  graphics.quark  maths.jet  maths.quark
stdlib/base/: array.jet  gc.acorn  memory.acorn  os.acorn  os.jet  types.acorn  types.jet  variables.acorn
stdlib/base/types/: array.acorn  booleans.acorn  conversions.acorn  floats.acorn  others.acorn  primitives.acorn  range.acorn  string.acorn  tuples.acorn
stdlib/builtin/: array.acorn  functions.acorn  types.acorn
stdlib/graphics/: colours.jet
stdlib/maths/: constants.jet  operators.jet  random.acorn  vector2.acorn
test/: CMakeLists.txt  acorntest.cpp  diagnostics.cpp
test/ast/: nodes_test.cpp
test/examples/: basic_operator.acorn  examples.cpp  generics.acorn  int_variable.acorn  minimal.acorn  multiple_methods.acorn  records.acorn  samples.cpp  single_method.acorn
test/parser/: keywords_test.cpp  parser.cpp  scanner.cpp  token.cpp
tests/: basic_generics.acorn  basic_operator.acorn  generics.acorn  int_variable.acorn  json.acorn  multiple_methods.acorn  protocols_with_modules.acorn  protocols_with_types.acorn  records.acorn  run.py  single_method.acorn
tests/generics/: types.jet
